--- a/force-app/main/default/lwc/newCreditNote/newCreditNote.css
+++ b/force-app/main/default/lwc/newCreditNote/newCreditNote.css
@@ -89,7 +89,7 @@
     background-color: #fff;
     border-radius: 10px;
     border: 1px solid #ccc;
-    overflow: hidden;
+    overflow: visible;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
